--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<center><img src="/images/iubbgreatagain.png" alt=""></center>
-
+<center><img src="https://github.com/jeffxmullins/mysite/blob/gh-pages/images/iubbgreatagain.png" alt="Make IUBB Great Again"></center>
+https://github.com/jeffxmullins/mysite/blob/gh-pages/images/iubbgreatagain.png
 <h2 align="center">Coming Soon</h2>
 
 </body>
