--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<center><img src="https://github.com/jeffxmullins/mysite/blob/gh-pages/images/iubbgreatagain.png" alt="Make IUBB Great Again"></center>
+<center><img src="images/iubbgreatagain.png" alt="Make IUBB Great Again"></center>
 
 <h2 align="center">Coming Soon</h2>
 
