--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>Make Indiana Basketball Great Again</title>
-<link rel="stylesheet" href="styles.css" type="text/css">
+<link rel="stylesheet" href="../styles.css" type="text/css">
 </head>
 <body>
 
