--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <html>
 <head>
 <title>Make Indiana Basketball Great Again</title>
-<link rel="stylesheet" href="../styles.css" type="text/css">
+<link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
 
 <center><img src="../images/iubbgreatagain.png" alt="Make IUBB Great Again"></center>
 
 <h2 align="center">Coming Soon</h2>
+<br><br>
+<center><img src="../images/crean.jpg" alt="crean"></center>
 
 </body>
 </html>
