--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <center><img src="../images/iubbgreatagain.png" alt="Make IUBB Great Again"></center>
 
-<h2 align="center">Coming Soon</h2>
+<h2 align="center">Coming Soon...</h2>
 <br><br>
 <center><img src="../images/crean.jpg" alt="crean"></center>
 
